--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
   </parent>
 
   <artifactId>argouml-sv</artifactId>
-  <version>0.35.1</version>
+  <version>0.35.2-SNAPSHOT</version>
 
   <properties>
     <project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
