Point to github instead of tigris.
This fixes the Issue Tracking and the Source Repository.

Change-Id: I1ef4155858ff06449f55b3fe8de5f723fc3c7bef

--- a/pom.xml
+++ b/pom.xml
@@ -53,4 +53,8 @@
 Swedish localization.
   </description>
 
+  <scm>
+    <!-- Specify this or maven will add artifactId. -->
+    <url>https://github.com/argouml-tigris-org/${github.site.repositoryName}</url>
+  </scm>
 </project>
