--- a/project.config
+++ b/project.config
@@ -4,6 +4,7 @@
 	action = rebase if necessary
 [access "refs/*"]
 	owner = group user/Linus Tolke (linustolke)
+	label-Verified = -1..+1 group ArgoUML-verifiers
 [access "refs/for/refs/*"]
 	label-Code-Review = -2..+2 group user/Linus Tolke (linustolke)
 	label-Verified = -1..+1 group user/Linus Tolke (linustolke)
